# rest-api-wl-shared

./: Cargo.toml
.github/workflows/: release.yml
src/: api_result_status.rs  configure_rest_api_server.rs  configure_rest_api_server_with_api_key.rs  countries.rs  lib.rs  validators.rs
src/cookie/: get_cookie.rs  mod.rs
src/get_client_id/: get_brand_id.rs  get_client_id.rs  mod.rs
src/get_language/: get_accept_language.rs  get_cookie_click_parameter.rs  get_cookie_language.rs  get_preferred_language.rs  mod.rs
src/header/: get_header.rs  mod.rs
src/middlewares/: auth_error_factory.rs  auth_failed.rs  auth_middleware.rs  get_cookie_parameter.rs  get_session_token.rs  mod.rs  request_creds.rs  session_entity.rs
src/token/: mod.rs
