[package]
name = "rest-api-wl-shared"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
auth-middleware = ["service-sdk/my-nosql-data-reader-sdk"]


[dependencies]
service-sdk = { tag = "0.2.4", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }


serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"
async-trait = "*"
