[package]
name = "rest-api-wl-shared"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
auth-middleware = ["service-sdk/my-nosql-data-reader-sdk"]


[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

rust-common = { tag="0.1.1", git = "https://github.com/MyJetTools/rust-common", features = ["country-code"] }

regex = "1.5.4"
phonenumber = "0.3"

lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"
async-trait = "*"
